[gd_scene load_steps=4 format=3 uid="uid://lsljqxnhqckg"]

[ext_resource type="Script" path="res://Scripts/Enemy1.gd" id="1_rreou"]
[ext_resource type="Texture2D" uid="uid://byvutxrn6l1kl" path="res://Assets/Enemy1.png" id="2_l7edj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rligc"]
size = Vector2(6, 5)

[node name="Enemy1" type="Area2D" groups=["enemy"]]
scale = Vector2(2, 2)
script = ExtResource("1_rreou")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_rligc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_l7edj")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0, 2)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.47035e-08, -3.9375)
scale = Vector2(0.3, 0.05625)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
